--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ sphinx-copybutton>=0.5.2
 sphinx-design>=0.5.0
 sphinx-autodoc-typehints>=1.25.2
 sphinx-autoapi>=3.0.0 
+requests>=2.28.0
+html2text>=2020.1.16
+beautifulsoup4>=4.11.0
+googlesearch-python>=1.1.0
+python-dotenv>=1.0.0
