Use file manager to save single and merged md files; Add reame for "Scrape to Markdown"

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_API_VERSION=2025-01-01-preview
 
+JINA_API_KEY=
 DEEPSEEK_ENDPOINT=https://api.deepseek.com
 DEEPSEEK_API_KEY=
 
